--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -184,7 +184,7 @@
 
                 <div class="panel panel-danger">
                     <div class="panel-heading text-center">
-                        <small>Information last updated on {{groupRanking.calculationDate | date:'medium':'UTC'}}</small>
+                        <small>Information last updated on {{groupRanking.calculationDate | date:'medium'}}</small>
                     </div>
                 </div>
             </div>
