--- a/packages/custom/ddb/public/views/profile.html
+++ b/packages/custom/ddb/public/views/profile.html
@@ -117,7 +117,13 @@
                                 <body>
                                 <tr ng-repeat="daily in dailyAnalyses | orderBy:'-date' | limitTo: recentActivityLimit">
                                     <th>{{daily.date | date:'EEE dd/MM/yy':'UTC'}}</th>
-                                    <td class="text-right"><em>{{daily.todAlc | number:2}} cl</em></td>
+                                    <td class="text-right" ng-init="alcDiff = getDiffFromAvg(daily)">
+                                        <em>{{daily.todAlc | number:2}} cl</em>&nbsp;
+                                         <span ng-switch="alcDiff < 0">
+                                            <span ng-switch-when="true" class="glyphicon glyphicon-arrow-up" style="color: red" tooltip="{{abs(alcDiff) | number:2}} cl more than usual on this day of the week"></span>
+                                            <span ng-switch-when="false" class="glyphicon glyphicon-arrow-down" style="color: green" tooltip="{{abs(alcDiff) | number:2}} cl less than usual on this day of the week"></span>
+                                        </span>
+                                    </td>
                                     <td class="text-right">{{daily.todPilsner}} cl</td>
                                     <td class="text-right">{{daily.todStrongbeer}} cl</td>
                                     <td class="text-right">{{daily.todWine}} cl</td>
@@ -250,7 +256,7 @@
             <div class="col-md-12">
                 <div class="panel panel-danger">
                     <div class="panel-heading text-center">
-                        <small>Information last updated on {{profile.calculationDate | date:'medium':'UTC'}}</small>
+                        <small>Information last updated on {{profile.calculationDate | date:'medium'}}</small>
                     </div>
                 </div>
             </div>
