--- a/packages/custom/ddb/public/views/group.html
+++ b/packages/custom/ddb/public/views/group.html
@@ -133,8 +133,9 @@
                         </div>
                         <div class="row visible-xs">
                             <div class="col-xs-12 text-center">
-                                <h3 class="panel-title">Trophies for {{groupRanking.calculationDate | date:'MMM
-                                    yyyy':'UTC'}}</h3>
+                                <h3 class="panel-title">
+                                    Trophies for {{month | date:'MMM yyyy':'UTC'}}
+                                </h3>
                             </div>
                         </div>
                         <div class="row visible-xs">
